# src/files_api/main.py
@@ -1,5 +1,6 @@
 """FastAPI application for managing files in an S3 bucket."""
 
+import os
 from textwrap import dedent
 from typing import Union
 
@@ -18,6 +19,21 @@ from files_api.monitoring.tracer import start_xray_tracing__middleware
 from files_api.routes import ROUTER
 from files_api.settings import Settings
 
+APP_DESCRIPTION = dedent(
+    """\
+    <a href="https://github.com/avr2002" target="_blank">\
+        <img src="https://img.shields.io/badge/Maintained%20by-Amit%20Vikram%20Raj-F4BBFF?style=for-the-badge">\
+    </a>
+    <a href="https://github.com/avr2002/files-api" target="_blank">\
+        <img src="https://img.shields.io/badge/github-repo-000000?style=for-the-badge&logo=github">\
+    </a>
+    <a href="https://mlops-club.org" target="_blank">\
+        <img src="https://img.shields.io/badge/MLOps%20Club-05998B?style=for-the-badge">\
+    </a>
+    <br>
+    """
+)
+
 
 def custom_generate_unique_id(route: APIRoute):
     """
@@ -32,24 +48,20 @@ def create_app(settings: Union[Settings, None] = None) -> FastAPI:
     """Create a FastAPI application."""
     settings = settings or Settings()
 
+    if os.getenv("LOCAL_MODE", "true").lower() == "true":
+        swagger_ui_init_oauth = None
+    else:
+        swagger_ui_init_oauth = {
+            "usePkceWithAuthorizationCodeGrant": True,
+            "clientId": os.environ["COGNITO_USER_POOL_CLIENT_ID"],
+            "additionalQueryStringParams": {"prompt": "login"},
+        }
+
     app = FastAPI(
         title="Files API",
         summary="Store and Retrieve Files.",
         version="v1",  # a fancier version would read the semver from pkg metadata
-        description=dedent(
-            """\
-        <a href="https://github.com/avr2002" target="_blank">\
-            <img src="https://img.shields.io/badge/Maintained%20by-Amit%20Vikram%20Raj-F4BBFF?style=for-the-badge">\
-        </a>
-        <a href="https://github.com/avr2002/files-api" target="_blank">\
-            <img src="https://img.shields.io/badge/github-repo-000000?style=for-the-badge&logo=github">\
-        </a>
-        <a href="https://mlops-club.org" target="_blank">\
-            <img src="https://img.shields.io/badge/MLOps%20Club-05998B?style=for-the-badge">\
-        </a>
-        <br>
-        """
-        ),
+        description=APP_DESCRIPTION,
         contact={
             "name": "Amit Vikram Raj",
             "url": "https://www.linkedin.com/in/avr27/",
@@ -61,12 +73,15 @@ def create_app(settings: Union[Settings, None] = None) -> FastAPI:
             "url": "https://github.com/avr2002/files-api/blob/main/LICENSE",
         },
         docs_url="/",  # its easier to find the docs when they live on the base url
+        openapi_url="/openapi.json",
         redoc_url="/redoc",
         root_path="/prod",  # adding stage name to the root path
         generate_unique_id_function=custom_generate_unique_id,
+        swagger_ui_oauth2_redirect_url="/docs/oauth2-redirect",  # default value
+        swagger_ui_init_oauth=swagger_ui_init_oauth,
     )
     app.state.settings = settings
-    app.include_router(ROUTER)
+    app.include_router(ROUTER, prefix="/api")
 
     app.add_exception_handler(
         exc_class_or_status_code=RequestValidationError,
